pemFioi/conceptViewer-1.0-mobileFirst.css
#conceptViewer {
    position: fixed;
    left: 0px;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 100%;
    overflow: auto;
    background: rgba(241, 242, 247, .9);
}
#conceptViewer .content {
    position: absolute;
    top: calc(51% - (90vh / 2));
    left: calc(50% - (90vw / 2));
    width: 90vw;
    height: 90vh;
    background-color: #fff;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: stretch;
}
#conceptViewer .panel-heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}
#conceptViewer .exit .icon {
    font-size: 18px;
    color: #4a90e2;
}
#conceptViewer .panel-body {
    display: flex;
    justify-content: stretch;
    height: 100%;
}
#conceptViewer .navigation {
    border-right: 1px solid rgba(0,0,0,0.1);
}

#conceptViewer .navigationLanguage {
    border-bottom: 1px solid rgba(0,0,0,0.1);
    padding: 10px;
}
#conceptViewer .navigationLanguage {
    position: relative;
}
#conceptViewer .showNavigationLanguage {
    display: block;
    background-color: #4a90e2;
    color: #fff;
    line-height: 20px;
    padding: 5px 20px;
    border-radius: 50px;
    position: relative;
    margin-left: 50px;
}
#conceptViewer .showNavigationLanguage::before {
    content: "\f121";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 20px;
    margin: 0 15px;
    color: #4a90e2;
    position: absolute;
    left: -55px;
}
@media screen and (orientation: landscape) and (max-width: 768px) {
    #conceptViewer .showNavigationLanguage {
        margin-left: 0;
    }
    #conceptViewer .showNavigationLanguage::before {
        content: normal;
    }
}
#conceptViewer .showNavigationLanguage::after {
    content: "\f107";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    position: absolute;
    right: 10px;
}
#conceptViewer .navigationLanguage ul {
    position: absolute;
    width: calc(100% - 4px);
    list-style-type: none;
    background-color: #fff;
    margin: 0;
    padding: 0;
    left: 2px;
    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
    visibility: hidden;
    opacity: 0;
    transition: opacity linear 150ms 25ms;
    z-index: 1;
}
#conceptViewer #showNavigationLanguage:checked + ul {
    visibility: visible;
    opacity: 1;
}
#conceptViewer .navigationLanguage ul li {
    line-height: 2em;
    padding: 0 20px;
    display: block;
    cursor: pointer;
}
#conceptViewer .navigationLanguage ul li.selected {
    background-color: #4a90e2;
    color: #fff;
}
#conceptViewer .navigationContent ul {
    list-style-type: none;
    margin: 1em 0 0;
    padding: 0;
}
#conceptViewer .navigationContent ul li {
    line-height: 3em;
    padding: 0 20px;
    cursor: pointer;
}
#conceptViewer .navigationContent ul li.selected {
    background-color: #4a90e2;
    color: #fff;
}
#conceptViewer #showNavigationLanguage,
#conceptViewer .showNavigationContent,
#conceptViewer #showNavigationContent {
    display: none;
}
@media screen and (max-width: 480px) and (orientation: portrait) {
    #conceptViewer .panel-body {
        display: block;
    }
    #conceptViewer .navigation {
        border: none;
    }
    #conceptViewer .navigationContent {
        border-bottom: 1px solid rgba(0,0,0,0.1);
        padding: 10px;
    }
    #conceptViewer .navigationContent {
        position: relative;
    }
    #conceptViewer .showNavigationContent {
        display: block;
        background-color: #4a90e2;
        color: #fff;
        line-height: 20px;
        padding: 5px 20px;
        border-radius: 50px;
        position: relative;
        margin-left: 50px;
    }
    #conceptViewer .showNavigationContent::before {
        content: "\f03a";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
        font-size: 20px;
        margin: 0 15px;
        color: #4a90e2;
        position: absolute;
        left: -55px;
    }
    #conceptViewer .showNavigationContent::after {
        content: "\f107";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
        position: absolute;
        right: 10px;
    }
    #conceptViewer .navigationContent ul {
        position: absolute;
        width: calc(100% - 4px);
        list-style-type: none;
        background-color: #fff;
        margin: 0;
        padding: 0;
        left: 2px;
        box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
        visibility: hidden;
        opacity: 0;
        transition: opacity linear 150ms 25ms;
    }
    #conceptViewer #showNavigationContent:checked + ul {
        visibility: visible;
        opacity: 1;
    }
    #conceptViewer .navigationContent ul li {
        line-height: 2em;
    }
}
#conceptViewer .viewer {
    flex-grow: 1;
}
#conceptViewer .viewerContent { /* iframe */
    width: 100%;
    height: 100%;
    border: none;
}

